# EmscriptenProjects

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  build.sh  web_build.bat
.github/workflows/: EmscriptenBuildDeploy.yml
HelloWorld/: HelloWorld.js  HelloWorld.wasm
projects/HelloWorld/: CMakeLists.txt
projects/HelloWorld/src/: HelloWorld.cpp
